mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_thread_join_wrong_arg_count.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: 'join' expects 0 argument(s), but 1 was provided
--> test_scripts/error_cases/semantic_thread_join_wrong_arg_count.mux:7:9
   |
 7 |         t.join(1)
   |         ^^^^^^
   |
= help: Too many arguments. Remove the extra argument(s).
